--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "yeoman-generator"
   ],
   "scripts": {
-    "build": "tsc --project . --outDir ./dist/generators/",
-    "clean": "rm -rf ./dist/",
+    "build": "npx tsc --project . --outDir ./dist/generators/",
+    "clean": "shx rm -rf ./dist/",
     "install": "npm run build && npm run _app_template_files && npm run _boilerplate-files && npm run _clear-package-json",
-    "_boilerplate-files": "cp LICENSE ./dist/ && cp README.md ./dist/",
-    "_app_templates_folder": "node_modules/.bin/mkdirp -p ./dist/generators/app/templates ",
+    "_boilerplate-files": "shx cp LICENSE ./dist/ && cp README.md ./dist/",
+    "_app_templates_folder": "npx mkdirp -p ./dist/generators/app/templates ",
     "_app_template_files": "npm run _app_templates_folder && cp -r generators/app/templates/* ./dist/generators/app/templates/",
     "_clear-package-json": "npx clear-package-json package.json --output ./dist/package.json"
   },
@@ -44,6 +44,7 @@
     "@types/validate-npm-package-name": "^3.0.3",
     "@types/yeoman-generator": "^5.2.8",
     "clean-publish": "^3.4.4",
+    "shx": "^0.3.4",
     "typescript": "^4.5.4"
   }
 }
