--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "npx tsc --project . --outDir ./dist/generators/",
     "clean": "shx rm -rf ./dist/",
     "install": "npm run build && npm run _app_template_files && npm run _boilerplate-files && npm run _clear-package-json",
-    "_boilerplate-files": "shx cp LICENSE ./dist/ && cp README.md ./dist/",
+    "_boilerplate-files": "shx cp LICENSE ./dist/ && shx cp README.md ./dist/",
     "_app_templates_folder": "npx mkdirp -p ./dist/generators/app/templates ",
     "_app_template_files": "npm run _app_templates_folder && cp -r generators/app/templates/* ./dist/generators/app/templates/",
     "_clear-package-json": "npx clear-package-json package.json --output ./dist/package.json"
