--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@springcomp/generator-readme",
+  "type": "module",
   "version": "0.9.0",
   "description": "Yeoman generator that creates a README.md file",
   "author": {
@@ -27,21 +28,17 @@
     "_clear-package-json": "npx clear-package-json package.json --output ./dist/package.json"
   },
   "dependencies": {
-    "deep-extend": "^0.6.0",
     "generator-license": "^5.5.0",
-    "inquirer": "^8.2.0",
+    "inquirer": "^9.2.14",
     "inquirer-npm-name": "^4.0.0",
     "mkdirp": "^1.0.4",
-    "validate-npm-package-name": "^3.0.0",
-    "yeoman-generator": "^5.6.1"
+    "yeoman-generator": "^7.1.1"
   },
   "devDependencies": {
-    "@types/inquirer": "^8.1.3",
-    "@types/inquirer-npm-name": "^3.0.2",
+    "@types/inquirer": "^9.0.7",
+    "@types/inquirer-npm-name": "^3.0.7",
     "@types/lodash": "^4.14.178",
     "@types/mkdirp": "^1.0.2",
-    "@types/validate-npm-package-name": "^3.0.3",
-    "@types/yeoman-generator": "^5.2.8",
     "clean-publish": "^3.4.4",
     "shx": "^0.3.4",
     "typescript": "^4.5.4"
