--- a/package.json
+++ b/package.json
@@ -28,10 +28,13 @@
     "_clear-package-json": "npx clear-package-json package.json --output ./dist/package.json"
   },
   "dependencies": {
+    "@types/validate-npm-package-name": "^4.0.2",
     "generator-license": "^5.5.0",
+    "import-meta-resolve": "^4.0.0",
     "inquirer": "^9.2.14",
     "inquirer-npm-name": "^4.0.0",
-    "mkdirp": "^1.0.4",
+    "lodash": "^4.17.21",
+    "validate-npm-package-name": "^5.0.0",
     "yeoman-generator": "^7.1.1"
   },
   "devDependencies": {
@@ -39,7 +42,9 @@
     "@types/inquirer-npm-name": "^3.0.7",
     "@types/lodash": "^4.14.178",
     "@types/mkdirp": "^1.0.2",
+    "@types/node": "^20.11.17",
     "clean-publish": "^3.4.4",
+    "mkdirp": "^1.0.4",
     "shx": "^0.3.4",
     "typescript": "^4.5.4"
   }
