--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "lib": ["es2017"],
+    "lib": ["es2020"],
     "module": "es2020",
     "moduleResolution": "node",
     "noImplicitAny": true,
@@ -10,10 +10,11 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strictNullChecks": true,
-    "target": "es2017",
-    "typeRoots": ["node_modules/@types"]
+    "target": "es2020",
+    "typeRoots": ["node_modules/@types", "typings"]
   },
   "include": [
+    "types/",
     "generators/**/*.ts"
   ],
   "exclude": [
